RESOLVED FIXED210438
[Async overflow scroll] Custom scrollbars on gmail don't show
https://bugs.webkit.org/show_bug.cgi?id=210438
Summary [Async overflow scroll] Custom scrollbars on gmail don't show
Simon Fraser (smfr)
Reported 2020-04-13 10:19:18 PDT
Created attachment 396302 [details] Reduction With async overflow scrolling enabled, the custom scrollbars on gmail are missing.
Attachments
Reduction (3.86 KB, text/html)
2020-04-13 10:19 PDT, Simon Fraser (smfr)
no flags
Patch (58.55 KB, patch)
2020-04-13 16:21 PDT, Simon Fraser (smfr)
thorton: review+
Patch (58.53 KB, patch)
2020-04-13 18:06 PDT, Simon Fraser (smfr)
no flags
Patch (58.56 KB, patch)
2020-04-13 23:11 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-13 10:19:47 PDT
Radar WebKit Bug Importer
Comment 2 2020-04-13 10:19:49 PDT
Simon Fraser (smfr)
Comment 3 2020-04-13 11:29:31 PDT
This happens any time we don't make backing store for the scroller; custom scrollbars are currently just painted.
Simon Fraser (smfr)
Comment 4 2020-04-13 16:21:13 PDT
Tim Horton
Comment 5 2020-04-13 16:23:03 PDT
Comment on attachment 396355 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396355&action=review > Source/WebCore/rendering/RenderLayerBacking.cpp:1791 > bool RenderLayerBacking::requiresHorizontalScrollbarLayer() const These functions seem a bit needless now. But maybe they're used externally?
Simon Fraser (smfr)
Comment 6 2020-04-13 18:06:30 PDT
Simon Fraser (smfr)
Comment 7 2020-04-13 21:45:10 PDT
This is waiting on bug 210460.
Simon Fraser (smfr)
Comment 8 2020-04-13 23:11:17 PDT
EWS
Comment 9 2020-04-14 09:04:26 PDT
Committed r260074: <https://trac.webkit.org/changeset/260074> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396382 [details].
Note You need to log in before you can comment on or make changes to this bug.