[Async overflow scroll] Custom scrollbars on gmail don't show https://bugs.webkit.org/show_bug.cgi?id=210438 <rdar://problem/61722541>

Reviewed by Tim Horton.

Source/WebCore:

Custom scrollbars painted into the backing store of the scrolling element, but that
might have become an empty "simple container layer" causing the scroll bars to not
be painted anywhere.

Fix by making compositing layers for custom scrollbars. This is better than giving
backing store to the scroller's element, because that might be huge.

Test: scrollbars/async-overflow-custom-scrollbar.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::requiresLayerForScrollbar const):
(WebCore::RenderLayerBacking::requiresHorizontalScrollbarLayer const):
(WebCore::RenderLayerBacking::requiresVerticalScrollbarLayer const):
(WebCore::RenderLayerBacking::requiresScrollCornerLayer const):
* rendering/RenderLayerBacking.h:

LayoutTests:

Layer tree dumps changed because of scrollbar and scroll corner layers.

* compositing/layer-creation/absolute-in-async-overflow-scroll-expected.txt:
* compositing/layer-creation/clipping-scope/nested-scroller-overlap-expected.txt:
* compositing/layer-creation/clipping-scope/overlap-constrained-inside-scroller-expected.txt:
* compositing/layer-creation/clipping-scope/overlap-constrained-inside-stacking-context-scroller-expected.txt:
* compositing/layer-creation/clipping-scope/scroller-with-negative-z-children-expected.txt:
* compositing/layer-creation/clipping-scope/shared-layers-in-scroller-expected.txt:
* compositing/overflow/overflow-auto-with-touch-expected.txt:
* compositing/overflow/overflow-overlay-with-touch-expected.txt:
* compositing/overflow/scrolling-content-clip-to-viewport-expected.txt:
* compositing/overflow/stacking-context-composited-scroller-with-foreground-paint-phases-expected.txt:
* compositing/overflow/textarea-scroll-touch-expected.txt:
* compositing/repaint/scroller-with-foreground-layer-repaints-expected.txt:
* compositing/rtl/rtl-scrolling-with-transformed-descendants-expected.txt:
* compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-clipped-by-scroll-expected.txt:
* compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-expected.txt:
* compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-nested-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-for-negative-z-in-scroller-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-hidden-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-visible-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-gain-clipping-layer-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-in-clipped-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-lose-clipping-layer-expected.txt:
* compositing/scrolling/async-overflow-scrolling/visibility-hidden-scrollers-expected.txt:
* compositing/scrolling/overflow-scrolling-layers-are-self-painting-expected.txt:
* compositing/shared-backing/overflow-scroll/absolute-in-stacking-relative-in-scroller-expected.txt:
* compositing/shared-backing/overflow-scroll/composited-absolute-in-absolute-in-relative-in-scroller-expected.txt:
* compositing/shared-backing/overflow-scroll/nested-absolute-with-clipping-in-stacking-overflow-expected.txt:
* compositing/shared-backing/overflow-scroll/previous-sibling-prevents-inclusiveness-expected.txt:
* compositing/shared-backing/overflow-scroll/relative-in-clipping-in-scroller-in-clipping-expected.txt:
* compositing/shared-backing/overflow-scroll/relative-in-clipping-in-scroller-in-relative-clipping-expected.txt:
* compositing/shared-backing/overflow-scroll/relative-in-div-in-overflow-scroll-expected.txt:
* compositing/shared-backing/overflow-scroll/scrolled-contents-has-painted-content-expected.txt:
* fast/scrolling/mac/event-region-scrolled-contents-layer-expected.txt:
* platform/mac/compositing/overflow/overflow-auto-with-touch-toggle-expected.txt:
* scrollbars/async-overflow-custom-scrollbar-expected.html: Added.
* scrollbars/async-overflow-custom-scrollbar.html: Added.
* tiled-drawing/scrolling/overflow/overflow-scrolled-down-tile-coverage-expected.txt:
* tiled-drawing/scrolling/overflow/overflow-scrolled-up-tile-coverage-expected.txt:
* tiled-drawing/scrolling/overflow/overflow-tile-coverage-expected.txt:


Canonical link: https://commits.webkit.org/223370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260074 268f45cc-cd09-0410-ab3c-d52691b4dbfc